syntax = "proto3";

service TodoService {
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse) {}
    rpc GetTodo (GetTodoRequest) returns (GetTodoResponse) {}
}

message Todo {
    uint64 id = 1;
    string title = 2;
    string detail = 3;
    bool is_archive = 4;
}

message CreateTodoRequest {
    string title = 1;
    string detail = 2;
}

message CreateTodoResponse {
    Todo todo = 1;
}

message GetTodoRequest {
    string id = 1;
}

message GetTodoResponse {
    Todo todo = 1;
}

